2004-10-20  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugens6.c (delrset): NULL list of delays for safety
	(delayr): Need to save curp at end of each k-cycle

2004-09-12  Michael Gogins <gogins@pipeline.com>

	* Added csound::Score::getCsoundScore method in CsoundVST for
	easier use of algorithmic composition classes in other
	Csound-based systems.

        * Updated csound.pdf with API documentation.

        * Restored real-time audio code to more functional version.

2004-10-16  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/sfont.c (Sfplist, filter_string): Removed static array
	to local in caller

2004-10-07 	Steven Yi	<stevenyi@csounds.com>

	* Top/dl_opcodes.c (csoundOpenLibrary): Fixed to work with cygwin

	* Top/thread.s : Fixed to work with cygwin

2004-09-17  John ffitch  <jpff@codemist.co.uk>

	* util2/exports/pv_export.c (main): Free malloced space

2004-09-12  Michael Gogins <gogins@pipeline.com>

	* Restored PortAudio to ASIO only, re-ordered 'notify' and 'wait' for
	better logic and performance.

	* Improved PortAudio stop/restart by returning PaAbort from callbacks.

	* Moved Windows DLLs to csound5 root directory.

	* Added SIGINT to Windows signals handled.

	* Improved order of directives and comments in custom.py.

	* Updated csound.pdf to reflect the above.

2004-09-11  Steven Yi  <stevenyi@csounds.com>

	* SConstruct: Changed to use prefix directory from command line 
	argument, defaults to /usr/local

	* SConstruct: Changed install-opcodes to install to 
	"prefix + /lib/csound/opcodes"

2004-09-11  Steven Yi  <stevenyi@csounds.com>

	* SConstruct: Added install, install-executables, and install-opcodes
	targets

2004-09-08  John ffitch  <jpff@codemist.co.uk>

	* SConstruct (ustub): Added bus.c

	* Opcodes/bus.c: New code for IO bus

	* Engine/oload.c: Initialise below

	* H/csoundCore.h (ENVIRON_): Added busik_, busia_, busok_, busia_

	* H/csdl.h (busik, busia, busok, busia): Added macros

2004-08-22  John ffitch  <jpff@codemist.co.uk>
